reduced font size of navbar brand to fix wrapping issue on mobile

--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ body {
 }
     
 .navbar-brand {
-    font-size: 18px;
+    font-size: 16px;
 }
     
 .navbar, .navbar-default {
